fixing base url

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Noelle's Digital Fabrication
 email: nantig@uw.edu
 description: >- # this means to ignore newlines until "baseurl:"
  This is a place for me to showcase projects and process I'm working on in HCDE 533, a class on Digital Fabrication.
-baseurl: "/jekyll-test-site" # the subpath of your site, e.g. /blog
-url: "https://github.com/nantig" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "jekyll-test-site" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  nantig
 
